# Taller

./: .gitignore  Makefile
TP1/: CMakeLists.txt
TP1/src/: Makefile  client.c  client.h  commons.c  commons.h  enumerables.h  lectura.c  lectura.h  main.c  nodo.c  nodo.h  rope.c  rope.h  server.c  server.h  socket.c  socket.h
TP1/src/r03/: client.in
TP1/src/tests/: test.c
TP2/: CMakeLists.txt  test.cpp
TP2/src/: BlockingString.cpp  BlockingString.h  EchoProcessor.cpp  EchoProcessor.h  File.cpp  File.h  LineProcessor.cpp  LineProcessor.h  Lock.cpp  Lock.h  Logger.cpp  Logger.h  Makefile  MatchProcessor.cpp  MatchProcessor.h  Processors.cpp  Processors.h  Reader.cpp  Reader.h  ReplaceProcessor.cpp  ReplaceProcessor.h  Thread.cpp  Thread.h  Threads.cpp  Threads.h  Writer.cpp  Writer.h  lectura.c  lectura.h  main.cpp  test.cpp  test.txt  test_out.txt  tp
TP3/: CMakeLists.txt
TP3/src/: Makefile  clientBinaryFile.cpp  clientBinaryFile.h  clientMain.cpp  clientNoMoreToReadException.cpp  clientNoMoreToReadException.h  clientOperations.h  commonFile.cpp  commonSocket.cpp  commonSocket.h  serverAcceptConnectionsThread.cpp  serverAcceptConnectionsThread.h  serverCardsData.cpp  serverCardsData.h  serverConnectionData.cpp  serverConnectionData.h  serverMain.cpp  serverProcessClientThread.cpp  serverProcessClientThread.h  serverProcessingCardException.cpp  serverProcessingCardException.h  serverQuitThread.cpp  serverQuitThread.h  serverThread.cpp  serverThread.h  serverThreads.cpp  serverThreads.h
